--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -67,3 +67,34 @@
   color: black;
   background: #b3b7c2;
 }
+
+
+.pagebutton {
+  border-radius: 16px;
+  width: 200px;
+  padding: 5px 6px;
+  color: rgba(0, 0, 0, 1);
+  font-weight: 600;
+  font-size: 16px;
+  font-family: 'Satoshi', sans-serif;
+  line-height: 17px;
+  cursor: pointer;
+  border: 0;
+
+  & {
+    background-color: hsl(48, 100%, 54%);
+  }
+
+  &:hover {
+    background-color: hsl(48, 100%, 45%);
+  }
+
+  &:active {
+    background-color: hsl(48, 100%, 37%);
+  }
+}
+
+.container {
+  display: flex;
+  gap: 20px;
+}
